--- a/frontend/src/app/components/execution-plan-model/execution-plan-model.component.html
+++ b/frontend/src/app/components/execution-plan-model/execution-plan-model.component.html
@@ -7,22 +7,14 @@
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <label>General Shipment Template</label>
-                        <input type="radio" class="form-control" name="template-type">
-                    </div>
-                    <div class="form-group">
-                        <label>Vaccine Shipment 3P Template</label>
-                        <input type="radio" class="form-control" name="template-type" disabled>
-                    </div>
-                    <div class="form-group">
-                        <label>4P Shipments Template</label>
-                        <input type="radio" class="form-control" name="template-type" disabled>
+                    <div *ngFor="let template of templates" class="form-group">
+                        <label>{{ template.name }}</label>
+                        <input type="radio" class="form-control" name="template-type" (change)="onChange(template, $event)">
                     </div>
                 </div>
                 <div class="modal-footer">
                     <input type="button" class="btn btn-danger" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-success" value="Create">
+                    <input type="submit" class="btn btn-success" value="Create"  (click)="createExecutionPlan()">
                 </div>
             </form>
         </div>
